# TurkishSpellChecker-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: NGramSpellCheckerTest.c  SimpleSpellCheckerTest.c
src/: CMakeLists.txt  CMakeUserPresets.json  Candidate.c  Candidate.h  ContextBasedSpellChecker.c  ContextBasedSpellChecker.h  NGramSpellChecker.c  NGramSpellChecker.h  Operator.h  SimpleSpellChecker.c  SimpleSpellChecker.h  SpellCheckerParameter.c  SpellCheckerParameter.h  SpellCheckerTrie.c  SpellCheckerTrie.h  SpellCheckerTrieNode.c  SpellCheckerTrieNode.h  TrieBasedSpellChecker.c  TrieBasedSpellChecker.h  TrieCandidate.c  TrieCandidate.h
